--- a/Assignments/Assignment2/Assignment1.html
+++ b/Assignments/Assignment2/Assignment1.html
@@ -10,6 +10,40 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        function validateForm(){
+            let x=document.getElementById("password").value;
+            if(x.length<=11){
+                alert("Length of Password must be greater than 11 characters");
+                return;
+            }
+            var re=/^(?=.*[A-Z])/;
+            if(!re.test(x)){
+                alert("Password should have atleast 1 Uppercase character needed");
+                return;
+            }
+            if(!(/^(?=.*?[0-9])/).test(x)){
+                alert("Password should have atleast 1 Numeric character needed");
+                return;
+            }
+            if(!(/^(?=.*?[#?!@$%^&*-])/).test(x)){
+                alert("Password should have atleast 1 Special character needed");
+                return;
+            }
+            let y=document.getElementById("email").value;
+            if(!(/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(y))){
+                alert("Invalid Email ID");
+                return;
+            }
+            y=document.getElementById("phone").value;
+            console.log(y+" "+y.length);
+            if(y.length!=10){
+                alert("Phone number should have 10 digits");
+                return;
+            }
+            alert("Form Submitted Successfully");
+        }
+    </script>
     <div class="header">
         <h1>Admission form</h1>
     </div>
@@ -20,13 +54,13 @@
         <div class="row">
             <div class="col-12 col-md-8">
                 <div class="container">
-                    <form>
+                    <form action="mailto:devanshu.dalal20@vit.edu" method="post" enctype="text/plain" name="validation_form">
                         <div class="row">
                             <div class="col-12 col-md-5">
                                 <label for="fname">First Name:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <input type="text" id="fname" name="fname"><br>
+                                <input type="text" id="fname" name="fname" required><br>
                             </div>
                         </div>
                         <div class="row">
@@ -34,7 +68,7 @@
                                 <label for="mname">Middle Name:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <input type="text" id="mname" name="mname"><br>
+                                <input type="text" id="mname" name="mname" required><br>
                             </div>
                         </div>
                         <div class="row">
@@ -42,7 +76,7 @@
                                 <label for="lname">Last Name:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <input type="text" id="lname" name="lname">
+                                <input type="text" id="lname" name="lname" required>
                             </div>
                         </div>
 
@@ -51,7 +85,7 @@
                                 <label for="qualification">Highest Qualification:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <select id="qualification" name="qualification">
+                                <select id="qualification" name="qualification" required>
                                     <option value="10">10</option>
                                     <option value="12">12</option>
                                     <option value="Diploma">Diploma</option>
@@ -63,7 +97,7 @@
                                 <label for="courses">Select Course:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <select id="courses" name="courses">
+                                <select id="courses" name="courses" required>
                                     <option value="B-Tech Computer Engineering">B-Tech Computer Engineering</option>
                                     <option value="B-Tech ENTC Engineering">B-Tech ENTC Engineering</option>
                                     <option value="B-Tech IT Engineering">B-Tech IT Engineering</option>
@@ -76,7 +110,7 @@
                                 <label for="phone">Mobile Number:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <input type="number" id="phone" name="phone">
+                                <input type="number" id="phone" name="phone" required>
                             </div>
                         </div>
                         <div class="row">
@@ -84,7 +118,15 @@
                                 <label for="email">Email:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <input type="email" id="email" name="email">
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-5">
+                                <label for="password">Password:</label>
+                            </div>
+                            <div class="col-12 col-md-7">
+                                <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
                             </div>
                         </div>
                         <div class="row">
@@ -92,22 +134,21 @@
                                 <label for="address">Address:</label>
                             </div>
                             <div class="col-12 col-md-7">
-                                <input type="text" id="address" name="address">
+                                <input type="text" id="address" name="address" required>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-            <div class="col-12 col-sm align self-center">
+            <div class="col-12 col-sm image align self-center">
                 <img src="vi.png" class="img-fluid">
             </div>
             <div style="margin-top:40px;margin-bottom:40px" class="row submit">
                 <div class="col-12 offset-5 col-md-2">
-                    <button class="btn btn-success">Submit</button>
+                    <button class="btn btn-success" onClick="validateForm()">Submit</button>
                 </div>
             </div>
         </div>
     </div>
-    
 </body>
 </html>
